<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:weightSum="1">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/blue"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <!--<ProgressBar-->
        <!--style="@android:style/Widget.ProgressBar.Small"-->
        <!--android:id="@+id/progressbar"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginEnd="5dp"/>-->

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Disto_Connect"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />


    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:visibility="gone"
        android:id="@+id/selectDevice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/plz_select_disto"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

    <ListView
        android:id="@+id/devices_listView"
        android:layout_width="match_parent"
        android:layout_height="305dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.49">

    </ListView>

    <TextView
        android:id="@+id/sdkVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/version"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/save_logs_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:background="@drawable/roundbuttons_logcolor"
        android:text="@string/save_logs"
        android:textColor="@color/colorMainText"
        android:textSize="12sp"
        android:visibility="gone" />

</LinearLayout>