<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/disto_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorAccent"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/status_txt"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:textSize="18sp"
            android:layout_marginEnd="5dp"
            android:textColor="@android:color/background_light"
            android:textAlignment="center"
            android:layout_alignParentBottom="true"
            />

        <TextView
            android:id="@+id/deviceName_txt"
            android:text=""
            android:layout_gravity="start|top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/background_light"

            />


    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/update_layout"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ButtonLayout"
        android:layout_alignParentEnd="true"
        android:layout_width="100dp"
        >

        <Button
            android:id="@+id/read_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/roundbuttons_basecolor"
            android:text="@string/read_btn"
            android:textSize="12sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/clear_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/roundbuttons_accentcolor"
            android:text="@string/clear_btn"
            android:textColor="@android:color/background_light"
            android:textSize="12sp"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/measurements_layout"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/measurements_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/measurements_lbl"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/modelName_txt"
            android:text=""
            android:layout_gravity="start|top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/background_dark"

            />

        <GridLayout
            android:id="@+id/measurements_gridLayout"
            android:layout_height="200dp"
            android:layout_width="221dp"
            android:columnCount="2"
            android:rowCount="9"
            android:orientation="horizontal"
            android:background="@drawable/measurements_border"
            tools:context=".GridXMLActivity">

            <TextView
                android:id="@+id/distance_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/distance_lbl"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/distance_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/default_value"
                android:textColor="@android:color/black"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/distance_unit_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginStart="10dp"
                android:text="@string/distance_unit_lbl"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/distance_unit_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginStart="10dp"
                android:text="@string/default_value"
                android:textColor="@android:color/black"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/inclination_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/inclination_lbl"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/inclination_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/default_value"
                android:textColor="@android:color/black"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/inclinationUnit_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginStart="10dp"
                android:text="@string/inclination_unit_lbl"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/inclinationUnit_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginStart="10dp"
                android:text="@string/default_value"
                android:textColor="@android:color/black"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/direction_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/direction_lbl"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/direction_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/default_value"
                android:textColor="@android:color/black"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/directionUnit_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginStart="10dp"
                android:text="@string/direction_unit_lbl"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/directionUnit_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginStart="10dp"
                android:text="@string/default_value"
                android:textColor="@android:color/black"
                android:textSize="14sp"/>

        </GridLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ButtonLayout"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/measurements_layout"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:id="@+id/command_layout"
            android:layout_width="180dp">


            <Button
                android:id="@+id/sendCommand_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/roundbuttons_basecolor"
                android:text="@string/send_command_btn"
                android:textSize="12sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/startTracking_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/roundbuttons_basecolor"
                android:text="@string/start_tracking_btn"
                android:textSize="12sp"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:id="@+id/buttons_layout"
            android:layout_alignParentEnd="true"
            android:layout_width="180dp">

            <Button
                android:id="@+id/distance_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/roundbuttons_basecolor"
                android:text="@string/distance_btn"
                android:textSize="12sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/stopTracking_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/roundbuttons_basecolor"
                android:text="@string/stop_tracking_btn"
                android:textSize="12sp"
                android:visibility="invisible" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
