<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:weightSum="1">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/disto_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorAccent"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/status_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="end|top"
            android:layout_marginEnd="5dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/deviceName_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:layout_marginStart="10dp"
            android:text=""
            android:textColor="@android:color/background_light"
            android:textSize="18sp"

            />


    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/measurements_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/disto_toolbar"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/measurements_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/measurements_lbl"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/modelName_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:text=""
            android:textColor="@android:color/background_dark"
            android:textSize="15sp"

            />

        <include layout="@layout/data_list_yeti" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/ButtonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/measurements_layout"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="-110dp">

        <LinearLayout
            android:id="@+id/Command_Layout"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/distance_btn"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="3dp"
                android:background="@drawable/roundbuttons_basecolor"
                android:text="@string/distance_btn"
                android:textSize="12sp"
                android:visibility="visible" />

            <Button
                android:id="@+id/sendCommand_btn"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="3dp"
                android:background="@drawable/roundbuttons_basecolor"
                android:text="@string/send_command_btn"
                android:textSize="12sp"
                android:visibility="visible" />

            <Button
                android:id="@+id/clear_btn"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="3dp"
                android:background="@drawable/roundbuttons_basecolor"
                android:text="@string/clear_btn"
                android:textSize="12sp"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/update_layout"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/update_btn"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="3dp"
                android:background="@drawable/roundbuttons_basecolor"
                android:text="@string/update"
                android:textSize="12sp"
                android:visibility="visible" />

            <Button
                android:id="@+id/reinstall_btn"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="3dp"
                android:background="@drawable/roundbuttons_basecolor"
                android:text="@string/reinstall_btn"
                android:textSize="12sp"
                android:visibility="visible" />

            <Button
                android:id="@+id/deviceInfo_btn"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="3dp"
                android:background="@drawable/roundbuttons_basecolor"
                android:text="@string/device_info_btn"
                android:textSize="12sp"
                android:visibility="visible" />

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
