<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_connect_disto"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/white"
                android:minHeight="80dp"
                android:text="@string/Disto_Connect"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:cornerRadius="10dp"
                app:icon="@drawable/ic_bluetooth"
                app:iconPadding="10dp"
                app:iconSize="30dp"
                app:iconTint="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/button_stroke"
                app:strokeWidth="2dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_connect_camera"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/white"
                android:minHeight="80dp"
                android:text="@string/CAM_Connect"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:cornerRadius="10dp"
                app:icon="@drawable/ic_wifi"
                app:iconPadding="10dp"
                app:iconSize="30dp"
                app:iconTint="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_connect_disto"
                app:strokeColor="@color/button_stroke"
                app:strokeWidth="2dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_survey_diameter"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/white"
                android:minHeight="80dp"
                android:text="@string/survey_diameter"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:cornerRadius="10dp"
                app:icon="@drawable/ic_diameter"
                app:iconPadding="10dp"
                app:iconSize="30dp"
                app:iconTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_connect_camera"
                app:strokeColor="@color/button_stroke"
                app:strokeWidth="2dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
